availability unit test cases